--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,9 @@ services:
     entrypoint: code-server /src --bind-addr 0.0.0.0:8080
     ports:
       - 8080:8080
+    volumes:
+      - ./src:/src
+      - ./code-server-data:/root/.local/share/code-server
   monitor:
     build: 
       context: .
